# AI_Final_Project

./: BERT.py  BLIP.py  README.md  bert  bertScore.py  claude.json  dataset.json
0510_discussion_codes/: BLIP.py  dataset.json
0512_try_blip_vqa_base_with_UI/: mygradio.py
0520_icook_crawler/: Stinky_Tofu.json  Taiwanese_fried_chicken.json  all.ipynb  all_cuisine_recipe.json  braised_rice.json  recipe_2.json  recipe_new.json  recipe_urls.json  response_claude.json  response_gpt.json
0521_F1_BERTscore/: grab_ingredient.py  ground_truth.json  main.ipynb
0524_metrics_ingredients/: BERT.ipynb  BERTScoreModel.ipynb  BERTmodel.ipynb  BLEU.ipynb  ROUGE.ipynb  claude.csv  gemini.csv  ground_truth.json  gt.csv  json_csv.py  response_claude.json  response_gemini.json  response_gpt.json
0524_metrics_ingredients/.ipynb_checkpoints/: BERTScoreModel-checkpoint.ipynb
MD_files/: 0416_AI_FinalProject_proposal_official.md
bert/: bert code
dataset/LLM_response/: response_claude.json  response_gemini.json
dataset/dataset_csv_files/: gpt.csv
dataset/ground_truth/: Taiwanese_fried_chicken.json  ground_truth.json
icook/: main.py
myBLIP/: local_img.py
previous_work/0521_F1_BERTscore/: GroundTruth_BraisedPorkRice.json  permutation.py
previous_work/MD_files/: 0508_跑LLM會需要的套件.md  0512_BLIP_FT_notes.md
previous_work/myBLIP/: main.py  pyproject.toml  questions.txt
result/: ingredient.xlsx  人工評分.xlsx
results/: cooking instructions.xlsx  表單回覆.xlsx
src/: BERTScoreModel.ipynb  ROUGE.ipynb
